# vllm-memory-estimator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: vllm-drift-check.yml
scripts/: build_validation_db.py  run_validation.py
src/memory_estimator/: __init__.py  buckets.py  budget.py  cli.py  config_utils.py  dtype_utils.py  estimator.py  kv_cache_specs.py  model_shapes.py  model_summary.py  quantization.py  reports.py  validation.py  validation_db.py  validation_runner.py  vllm_cmd_parser.py  vllm_defaults.py
src/vllm_memory_estimator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: validation_db.json  validation_report_2026-05-15.html  validation_report_2026-05-15.json  validation_report_2026-05-16.html  validation_report_2026-05-16.json
tests/: conftest.py  test_buckets.py  test_budget.py  test_cli.py  test_dtype_utils.py  test_estimator.py  test_kv_cache_specs.py  test_memory_profile.py  test_model_shapes.py  test_quantization.py  test_validation.py  test_validation_db.py  test_validation_runner.py  test_vllm_cmd_parser.py  test_vllm_profile.py
web/: index.html  package.json
web/api/: server.py
web/src/: App.tsx  index.css
web/src/components/: BudgetForm.tsx  BudgetMatrix.tsx  EstimateForm.tsx  EstimateResult.tsx
web/src/components/ui/: button.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx
web/src/lib/: api.ts
