[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-memory-estimator"
version = "0.1.0"
description = "Estimate GPU memory needs for serving Hugging Face models with vLLM."
readme = "README.md"
authors = [
    { name = "Ashish Kamra" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub>=0.20.0",
    # ModelConfig, ParallelConfig, and model_arch_config APIs used for
    # architecture detection (MLA, hybrid, TP-aware KV heads) require
    # vLLM ≥0.9. KVCacheSpec classes were added in 0.8.
    "vllm>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.4",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
memory-estimator = "memory_estimator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "cuda: mark tests that require a CUDA-compatible GPU",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["memory_estimator"]
